--- a/PracticeLab3Real/app/src/main/res/layout/activity_main.xml
+++ b/PracticeLab3Real/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -11,18 +11,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.mdaum.practicelab3real.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:id="@+id/textView" />
-
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="37dp"
-        android:id="@+id/iV" />
-</RelativeLayout>
+        android:layout_width="250dp"
+        android:id="@+id/iV"
+        android:layout_height="194dp"
+        android:scaleType="fitXY" />
+
+</LinearLayout>
